--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
+    "@react-query-firebase/firestore": "^1.0.0-dev.7",
+    "dayjs": "^1.11.6",
+    "firebase": "^9.14.0",
+    "less": "^4.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-query": "^3.39.2",
     "react-scripts": "^3.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts-less start",
+    "build": "react-scripts-less build",
+    "test": "react-scripts-less test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,7 +34,6 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.3.0",
@@ -37,6 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "react-scripts-less": "^5.0.4"
   }
 }
