--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
     "@react-query-firebase/firestore": "^1.0.0-dev.7",
+    "@tabler/icons": "^1.113.0",
     "dayjs": "^1.11.6",
     "firebase": "^9.14.0",
     "less": "^4.1.3",
