--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@tabler/icons": "^1.113.0",
     "dayjs": "^1.11.6",
     "firebase": "^9.14.0",
+    "jsdoc": "^4.0.0",
     "less": "^4.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
